--- a/public/index.html
+++ b/public/index.html
@@ -9,15 +9,15 @@
 </head>
 <body class="container">
 
-    <h1 class="mt-5">Acceso denegado1</h1>
+    <h1 class="mt-5">Acceso denegado</h1>
     <hr>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.1/socket.io.js" integrity="sha512-vGcPDqyonHb0c11UofnOKdSAt5zYRpKI4ow+v6hat4i96b7nHSn8PQyk0sT5L9RECyksp+SztCPP6bqeeGaRKg==" crossorigin="anonymous"></script>
 
     <script>
         // Conexión con el socket server
-        const socket = io('https://react-socket-course.herokuapp.com/');
-
+        const socket = io('http://localhost:8080');
+        //https://react-socket-course.herokuapp.com/
         
         /// Para emitir
         // socket.emit('mensaje-to-server', { data });
